tests/health/tests__regress__issue12_test_force.toit.gold
tests/regress/issue12_test_force.toit:15:10: error: Class 'A' does not have any method 'hash_code'
    this.hash_code
         ^~~~~~~~~
